Fixed disappearing tile border on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1140,17 +1140,17 @@ body { display: -webkit-box; display: -ms-flexbox; display: flex; min-height: 10
 .feature__item .archive__item-body { padding-left: 1.6949152542%; padding-right: 1.6949152542%; }
 .feature__item a.btn::before { content: ''; position: absolute; left: 0; top: 0; right: 0; bottom: 0; }
 
-.feature__item--tile { position: relative; margin-bottom: 2em; font-size: 1.5em;}
-@media (min-width: 37.5em) { .feature__item--tile { float: left; margin-bottom: 1em; width: 30%; border: 2px solid #268; border-radius: 2%}
-  .feature__item--tile:nth-child(3n + 1) { clear: both; margin-left: 0;}
-  .feature__item--tile:nth-child(3n + 2) { clear: none; margin-left: 5%;}
-  .feature__item--tile:nth-child(3n + 3) { clear: none; margin-left: 5%;}
-  .feature__item--tile .feature__item-teaser { max-height: 200px; overflow: hidden; margin-bottom: 0;} }
-.feature__item--tile .archive__item-body { padding-left: 1.6949152542%; padding-right: 1.6949152542%; text-align: center;}
+.feature__item--tile { position: relative; margin-bottom: 2em; margin-right: auto; margin-left: auto; font-size: 1.5em; max-width: 300px; border: 2px solid #268; border-radius: 2%; }
+@media (min-width: 50em) { .feature__item--tile { float: left; margin-bottom: 1em; width: 30%; }
+  .feature__item--tile:nth-child(3n + 1) { clear: both; margin-left: 0; }
+  .feature__item--tile:nth-child(3n + 2) { clear: none; margin-left: 5%; }
+  .feature__item--tile:nth-child(3n + 3) { clear: none; margin-left: 5%; }
+  .feature__item--tile .feature__item-teaser { max-height: 200px; overflow: hidden; margin-bottom: 0; } }
+.feature__item--tile .archive__item-body { padding-left: 1.6949152542%; padding-right: 1.6949152542%; text-align: center; }
 .feature__item--tile a.btn::before { content: ''; position: absolute; left: 0; top: 0; right: 0; bottom: 0; text-align: center; }
 
 .feature__item--team { position: relative; font-size: 1.125em; }
-@media (min-width: 37.5em) { .feature__item--team { float: left; margin-bottom: 2em; width: 15%;}
+@media (min-width: 37.5em) { .feature__item--team { float: left; margin-bottom: 2em; width: 15%; }
   .feature__item--team:nth-child(6n + 1) { clear: both; margin-left: 0; }
   .feature__item--team:nth-child(6n + 2) { clear: none; margin-left: 1.6949152542%; }
   .feature__item--team:nth-child(6n + 3) { clear: none; margin-left: 1.6949152542%; }
@@ -1158,8 +1158,8 @@ body { display: -webkit-box; display: -ms-flexbox; display: flex; min-height: 10
   .feature__item--team:nth-child(6n + 5) { clear: none; margin-left: 1.6949152542%; }
   .feature__item--team:nth-child(6n + 6) { clear: none; margin-left: 1.6949152542%; }
   .feature__item--team .feature__item-teaser { max-height: 200px; overflow: hidden; } 
-  .feature__item--team .archive__item-teaser { max-width: 200px; margin-left: auto; margin-right: auto;} }
-@media (max-width: 37.5em) { .feature__item--team .archive__item-teaser { max-width: 200px; margin-left: auto; margin-right: auto;} }
+  .feature__item--team .archive__item-teaser { max-width: 200px; margin-left: auto; margin-right: auto; } }
+@media (max-width: 37.5em) { .feature__item--team .archive__item-teaser { max-width: 200px; margin-left: auto; margin-right: auto; } }
 .feature__item--team .archive__item-body { padding-left: 1.6949152542%; padding-right: 1.6949152542%; }
 .feature__item--team .archive__item-title { text-align: center; font-size: small; }
 .feature__item--team .archive__item-excerpt { text-align: center; font-size: small; }
